# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
+
 info:
-  version: "0.0.1"
-  title: Authentication App
+  $ref: ./info/index.yaml
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,134 +18,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /user:
-    x-swagger-router-controller: user
-    get:
-      operationId: getAll
-      description: get the users list
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetUsersListResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    post:
-      operationId: save
-      description: add a new user to the list
-      # user info to be stored
-      parameters:
-        - name: username
-          description: user properties
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/User"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-            
-  /user/{id}:
-    x-swagger-router-controller: user
-    get:
-      operationId: getOne
-      description: get a user
-      
-      parameters:
-        - name: id
-          type: number
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetUserResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-     
-    put:
-      operationId: update
-      description: update a user
-      
-      parameters:
-        - name: id
-          description: User id
-          type: number
-          in: path
-          required: true
-        - name: username
-          description: user name
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/User"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-     
-    delete:
-      operationId: delUser
-      description: delete a user
-      # define the parameters
-      parameters:
-        - name: id
-          description: User id
-          type: number
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-            
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /swagger:
-    x-swagger-pipe: swagger_raw
+  $ref: ./paths/index.yaml
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
@@ -201,9 +74,28 @@ definitions:
       email:
         type: string
         description: email address
+      # roles:
+      #   type: array
+      #   items: 
+      #     type: object
+      #     properties:
+      #       id:
+      #         type: number
+      #       name:
+      #         type: string
     required:
       - username
       - email
+      # - roles
+  
+  Role:
+    type: object
+    properties:
+      name:
+        type: string
+        description: role name
+    required:
+      - name
       
   GeneralResponse:
     type: object
@@ -217,3 +109,28 @@ definitions:
     required:
       - success
       - description
+      
+  GetRolesListResponse:
+    required:
+      - roles
+    properties:
+      # The array of users
+      roles:
+        type: array
+        items: 
+          type: object
+          properties:
+            id:
+              type: number
+            name:
+              type: string
+      
+  GetRoleResponse:
+    required:
+      - id
+      - name
+    properties:
+      id:
+        type: number
+      name: 
+        type: string    
